# global-agent-hackathon-may-2025

submissions/Clippy/: .gitignore  Clippy-mac.spec  Clippy-win.spec  README.md  entitlements.plist  memory.db  pyproject.toml  pyrightconfig.json  requirements-mac.txt  requirements.txt  win-requirement.txt
submissions/Clippy/ClippyWindowNative/: App.xaml  App.xaml.cs  ClippyWindowNative.csproj  ClippyWindowNative.sln  MainWindow.xaml  MainWindow.xaml.cs
submissions/Clippy/MACOS Native/Clippy/Clippy/: AppDelegate.swift  Info.plist  ViewController.swift
submissions/Clippy/MACOS Native/Clippy/Clippy.xcodeproj/: project.pbxproj
submissions/Clippy/MACOS Native/Clippy/Clippy.xcodeproj/project.xcworkspace/xcuserdata/smil.xcuserdatad/: UserInterfaceState.xcuserstate
submissions/Clippy/MACOS Native/Clippy/Clippy/Base.lproj/: Main.storyboard
submissions/Clippy/src/: main.py
submissions/Clippy/src/agentTools/: agentTools.py
submissions/Clippy/src/agents/: agentsUtility.py  mainAgent.py  multiModalAgent.py
submissions/Clippy/src/components/: aiResponseContainer.py  resultSection.py  resultSectionContainer.py  summaryPopup.py
submissions/Clippy/src/enums/: commonExtension.py
submissions/Clippy/src/states/: componentRef.py  focusStates.py  resultsState.py  scrollState.py  thinkingStates.py
submissions/Clippy/src/utilities/: FocusKeyManagement.py  checkPermissions.py  colors.py  debouncer.py  fileUtils.py  getResourcePath.py  listSorter.py  openApp.py  searchUtils.py
