[project]
name = "clippy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "agno==1.3.4",
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "arrow==1.3.0",
  "beautifulsoup4==4.13.4",
  "binaryornot==0.4.4",
  "build==1.2.2.post1",
  "CacheControl==0.14.2",
  "cachetools==5.5.2",
  "certifi==2025.1.31",
  "cffi==1.17.1",
  "chardet==5.2.0",
  "charset-normalizer==3.4.1",
  "cleo==2.1.0",
  "click==8.1.8",
  "cookiecutter==2.6.0",
  "crashtest==0.4.1",
  "Cython==3.0.12",
  "distlib==0.3.9",
  "docstring_parser==0.16",
  "dotenv==0.9.9",
  "duckduckgo_search==8.0.1",
  "dulwich==0.22.8",
  "fastapi==0.115.12",
  "fastjsonschema==2.21.1",
  "filelock==3.18.0",
  "findpython==0.6.3",
  "flet==0.27.6",
  "flet-web==0.27.6",
  "gitdb==4.0.12",
  "GitPython==3.1.44",
  "google-auth==2.39.0",
  "google-genai==1.11.0",
  "googlesearch-python==1.3.0",
  "h11==0.14.0",
  "httpcore==1.0.8",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "idna==3.10",
  "installer==0.7.0",
  "jaraco.classes==3.4.0",
  "jaraco.context==6.0.1",
  "jaraco.functools==4.1.0",
  "Jinja2==3.1.6",
  "keyring==25.6.0",
  "lxml==5.3.2",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "mdurl==0.1.2",
  "more-itertools==10.6.0",
  "MouseInfo==0.1.3",
  "msgpack==1.1.0",
  "oauthlib==3.2.2",
  "packaging==24.2",
  "pbs-installer==2025.4.9",
  "pkginfo==1.12.1.2",
  "platformdirs==4.3.7",
  "primp==0.15.0",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "PyAutoGUI==0.9.54",
  "pycountry==24.6.1",
  "pycparser==2.22",
  "pydantic==2.11.3",
  "pydantic-settings==2.9.1",
  "pydantic_core==2.33.1",
  "PyGetWindow==0.0.9",
  "Pygments==2.19.1",
  "PyMsgBox==1.0.9",
  "pynput==1.8.1",
  "pyobjc-core==11.0",
  "pyobjc-framework-ApplicationServices==11.0",
  "pyobjc-framework-Cocoa==11.0",
  "pyobjc-framework-CoreText==11.0",
  "pyobjc-framework-Quartz==11.0",
  "pyperclip==1.9.0",
  "pypng==0.20220715.0",
  "pyproject_hooks==1.2.0",
  "PyRect==0.2.0",
  "PyScreeze==1.0.1",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.0",
  "python-multipart==0.0.20",
  "python-slugify==8.0.4",
  "pytweening==1.2.0",
  "PyYAML==6.0.2",
  "qrcode==7.4.2",
  "RapidFuzz==3.13.0",
  "repath==0.9.0",
  "requests==2.32.3",
  "requests-toolbelt==1.0.0",
  "rich==14.0.0",
  "rsa==4.9.1",
  "rubicon-objc==0.5.0",
  "screeninfo==0.8.1",
  "shellingham==1.5.4",
  "six==1.17.0",
  "smmap==5.0.2",
  "sniffio==1.3.1",
  "soupsieve==2.7",
  "starlette==0.46.2",
  "text-unidecode==1.3",
  "trove-classifiers==2025.4.11.15",
  "typer==0.15.2",
  "types-python-dateutil==2.9.0.20241206",
  "typing-inspection==0.4.0",
  "typing_extensions==4.13.2",
  "urllib3==2.4.0",
  "uvicorn==0.34.1",
  "uvloop==0.21.0",
  "watchdog==4.0.2",
  "watchfiles==1.0.5",
  "websockets==15.0.1",
  "xattr==1.1.4",
  "zstandard==0.23.0",
  "SQLAlchemy==2.0.40"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "clippy"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}